# trusin

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  benchmark.js  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  install.sh  story.md
.github/workflows/: deploy-pages.yml  deploy.yml  release.yml
apps/backend/: Cargo.toml
apps/backend/migrations/: 20240701000000_create_webhook_events.sql  20240702000000_create_forward_rules.sql  20240703000000_create_users.sql  20240704000000_add_response_fields.sql  20240705000000_add_oauth_to_users.sql  20240706000000_add_signing_secret.sql  20240707000000_delivery_attempts.sql  20240708000000_create_api_tokens.sql  20240709000000_create_audit_logs.sql  20240710000000_multitenancy.sql  20240711000000_platform_operator.sql  20240712000000_organization_invites.sql  20240713000000_provider_hooks.sql  20240714000000_hook_triggers.sql  20240715000000_oauth_identities_and_email_deliveries.sql  20260715221500_unique_delivery_attempt_numbers.sql  20260715223000_organization_ingest_keys.sql  20260716090000_hook_destinations.sql  20260716091000_provider_ingest_hostname.sql  20260716100000_workspace_destinations.sql  20260716101000_hook_notification_deliveries.sql  20260716102000_weekly_reliability_digests.sql  20260716110000_remove_email_destinations.sql  20260716111000_inactive_signup_follow_up.sql  20260717090000_user_passkeys.sql
apps/backend/src/: ai.rs  audit.rs  auth.rs  config.rs  destinations.rs  digests.rs  events.rs  invites.rs  main.rs  middleware.rs  model.rs  organizations.rs  platform.rs  ratelimit.rs  rules.rs  send.rs  state.rs  stats.rs  users.rs  webhook.rs  workers.rs
apps/backend/templates/: inactive-follow-up.hbs  welcome.hbs
apps/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  config.ts  index.css  main.tsx
apps/frontend/src/components/: EndpointBox.tsx  EventRow.tsx  StatusBadge.tsx
apps/frontend/src/components/layout/: CommandPalette.tsx  Layout.tsx  Sidebar.tsx  TopBar.tsx
apps/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Pagination.tsx  Spinner.tsx  Table.tsx  index.ts
apps/frontend/src/lib/: api.ts  auth.ts  format.ts  hooks.ts  user-context.ts
apps/frontend/src/pages/: Activity.tsx  Dashboard.tsx  EventDetail.tsx  Hooks.tsx  Login.tsx  Metrics.tsx  Organization.tsx  Platform.tsx  Providers.tsx  SendWebhook.tsx  Settings.tsx  Users.tsx
apps/frontend/src/theme/: tokens.css
apps/frontend/src/types/: api.ts
apps/landing/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/landing/public/: 404.html  llms-full.txt  robots.txt  seo.css  sitemap.xml
apps/landing/public/cli/: index.html
apps/landing/public/compare/hookdeck-alternative/: index.html
apps/landing/public/compare/svix-alternative/: index.html
apps/landing/public/mcp/: index.html
apps/landing/public/self-hosted/: index.html
apps/landing/public/webhook-delivery/: index.html
apps/landing/public/webhook-relay/: index.html
apps/landing/public/webhook-retries/: index.html
apps/landing/src/: main.tsx  styles.css
apps/mcp/: Cargo.toml  test_mcp.sh
apps/mcp/src/: main.rs
apps/receiver/: Cargo.toml
apps/receiver/src/: main.rs
apps/tui/: Cargo.toml
apps/tui/src/: auth.rs  interactive.rs  main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
deploy/: .env.example  install-release.sh  terusin-backend.service  terusin-web.service  trusin.caddy
docs/: PRD.md  PRD_PRODUCTION_HARDENING.md  UAT_ADMIN.md
scripts/: e2e-smoke.sh  generate-llms.mjs
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: intro.md
website/docs/concepts/: architecture.md  reliability.md
website/docs/guides/: authentication.md  cli-and-mcp.md  local-development.md  webhooks.md
website/docs/learn/: self-hosted-infrastructure.md  webhook-delivery.md  webhook-relay-vs-queues.md  webhook-retries.md
website/docs/operations/: deployment.md  testing.md  troubleshooting.md
website/docs/reference/: api.md  configuration.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/static/: llms.txt  robots.txt
