[workspace]
resolver = "2"
members = ["apps/backend", "apps/web", "apps/tui", "apps/mcp", "apps/receiver"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower-http = { version = "0.6", features = ["cors", "auth"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
bcrypt = "0.16"
base64 = "0.22"
tokio-stream = "0.1"
jsonwebtoken = "9"
serde_urlencoded = "0.7"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
governor = "0.7"
bytes = "1"
rand = "0.8"
