[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
redis.workspace = true
bcrypt.workspace = true
base64.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
serde_urlencoded.workspace = true
anyhow.workspace = true
