[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
redis.workspace = true
bcrypt.workspace = true
base64.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
serde_urlencoded.workspace = true
anyhow.workspace = true
hmac.workspace = true
sha2.workspace = true
governor.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
rand.workspace = true
async-trait.workspace = true
handlebars.workspace = true
hickory-resolver = "0.24"
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
