[package]
name = "mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trusin-mcp"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
