[package]
name = "receiver"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
