[package]
name = "terusin"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
open = "5"
base64 = "0.22"
dirs = "5"
toml = "0.8"
keyring = "3"
