[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
rust-embed = "8"
mime_guess = "2"
base64.workspace = true
